Omit stream 18 from the list of available streams in IniTeX mode

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1031,18 +1031,20 @@
 % \end{variable}
 %
 % \begin{variable}{\g_@@_streams_seq}
-%   A list of the currently-available output streams to be used as a stack.
+%   A list of the currently-available output streams to be used as a
+%   stack.  The stream $18$ is special, as \tn{write}18 is used to
+%   denote commands to be sent to the OS\@.
 %    \begin{macrocode}
 \seq_new:N \g_@@_streams_seq
 %<*initex>
-\use:x
+\exp_args:Nnx \use:n
+  { \seq_gset_split:Nnn \g_@@_streams_seq { } }
   {
-    \exp_not:n { \seq_gset_split:Nnn \g_@@_streams_seq { } }
-      {
-        \int_step_function:nnnN { 0 } { 1 } { \c_term_iow }
-          \prg_do_nothing:
-      }
+    \int_step_function:nnnN { 0 } { 1 } { \c_term_iow }
+      \prg_do_nothing:
   }
+\int_compare:nNnF \c_term_iow < { 18 }
+  { \seq_gremove_all:Nn \g_@@_streams_seq { 18 } }
 %</initex>
 %    \end{macrocode}
 % \end{variable}
