Actually document \sort_return_same: and \sort_return_swapped: [ci skip]

--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -91,6 +91,18 @@
 %   previously allocated \tn{toks} register is not a problem.
 % \end{texnote}
 %
+% \begin{function}[added = 2017-02-06]{\sort_return_same:, \sort_return_swapped:}
+%   \begin{syntax}
+%     \cs{seq_sort:Nn} \meta{seq~var}
+%     ~~|{| \ldots{} \cs{sort_return_same:} or \cs{sort_return_swapped:} \ldots{} |}|
+%   \end{syntax}
+%   Indicates whether to keep the order or swap the order of two items
+%   that are compared in the sorting code.  Only one of the
+%   \cs[no-index]{sort_return_\ldots{}} functions should be used by the
+%   code, according to the results of some tests on the items |#1| and
+%   |#2| to be compared.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
