--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1565,11 +1565,17 @@
 \cs_new_protected:Npn \cs_generate_variant:Nn #1#2
   {
     \@@_generate_variant:N #1
-    \exp_after:wN \@@_split_function:NN
-    \exp_after:wN #1
-    \exp_after:wN \@@_generate_variant:nnNN
-    \exp_after:wN #1
-    \tl_to_str:n {#2} , \scan_stop: , \q_recursion_stop
+    \use:x
+      {
+        \@@_generate_variant:nnNN
+          \exp_after:wN \cs_split_function:N
+          \exp_after:wN #1
+          \exp_after:wN \exp_not:N
+          \exp_after:wN #1
+          \tl_to_str:n {#2} ,
+            \exp_not:N \scan_stop: ,
+            \exp_not:N \q_recursion_stop
+      }
   }
 \cs_new_protected:Npn \cs_generate_variant:cn
   { \exp_args:Nc \cs_generate_variant:Nn }
@@ -2006,7 +2012,13 @@
 %   }
 %    \begin{macrocode}
 \cs_new_protected:Npn \prg_generate_conditional_variant:Nnn #1
-  { \__cs_split_function:NN #1 \@@_generate_variant:nnNnn }
+  {
+    \use:x
+      {
+        \@@_generate_variant:nnNnn
+          \cs_split_function:N #1
+      }
+  }
 \cs_new_protected:Npn \@@_generate_variant:nnNnn #1#2#3#4#5
   {
     \if_meaning:w \c_false_bool #3
