Simplify one use of \cs_split_function:N and correct its documentation

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -801,14 +801,13 @@
 %   \end{syntax}
 %   Splits the \meta{function} into the \meta{name} (\emph{i.e.}~the part
 %   before the colon) and the \meta{signature} (\emph{i.e.}~after the colon).
-%   This information is then placed in the input stream after the
-%   \meta{processor} function in three parts: the \meta{name}, the
+%   This information is then placed in the input stream
+%   in three parts: the \meta{name}, the
 %   \meta{signature} and a logic token indicating if a colon was found
 %   (to differentiate variables from function names). The \meta{name}
 %   does not include the escape character, and both the \meta{name} and
 %   \meta{signature} are made up of tokens with category code $12$
-%   (other). The \meta{processor} should be a function with argument
-%   specification \texttt{:nnN} (plus any trailing arguments needed).
+%   (other).
 % \end{function}
 %
 % \section{Using or removing tokens and arguments}
