--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3362,16 +3362,16 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_u_not_cs:
   {
-    \exp_args:No \__tl_analysis_map_inline:nn { \l_@@_internal_a_tl }
+    \tl_analysis_map_inline:on { \l_@@_internal_a_tl }
       {
         \tl_build_put_right:Nx \l_@@_build_tl
           {
             \@@_class:NnnnN \c_true_bool
               {
-                \if_int_compare:w "##2 = 0 \exp_stop_f:
+                \if_int_compare:w "##3 = 0 \exp_stop_f:
                   \@@_item_exact_cs:n { \exp_after:wN \cs_to_str:N ##1 }
                 \else:
-                  \@@_item_exact:nn { \int_value:w "##2 } { ##3 }
+                  \@@_item_exact:nn { \int_value:w "##3 } { ##2 }
                 \fi:
               }
               { 1 } { 0 } \c_false_bool
@@ -4579,8 +4579,8 @@
     \int_set:Nn \l_@@_curr_pos_int { 2 * \l_@@_max_state_int }
     \@@_query_set:nnn { } { -1 } { -2 }
     \int_set_eq:NN \l_@@_min_pos_int \l_@@_curr_pos_int
-    \__tl_analysis_map_inline:nn {#1}
-      { \@@_query_set:nnn {##1} {"##2} {##3} }
+    \tl_analysis_map_inline:nn {#1}
+      { \@@_query_set:nnn {##1} {"##3} {##2} }
     \int_set_eq:NN \l_@@_max_pos_int \l_@@_curr_pos_int
     \@@_query_set:nnn { } { -1 } { -2 }
     \@@_match_init:
