--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -65,6 +65,29 @@
 %   characters, and the value of registers.
 % \end{function}
 %
+% \begin{function}[added = 2018-04-09]
+%   {\tl_analysis_map_inline:nn, \tl_analysis_map_inline:on}
+%   \begin{syntax}
+%     \cs{tl_analysis_map_inline:nn} \Arg{token list} \Arg{inline function}
+%   \end{syntax}
+%   Applies the \meta{inline function} to each individual \meta{token}
+%   in the \meta{token list}. The \meta{inline function} receives three
+%   arguments:
+%   \begin{itemize}
+%     \item \meta{tokens}, which both \texttt{o}-expand and
+%       \texttt{x}-expand to the \meta{token}. The detailed form of
+%       \meta{token} may change in later releases.
+%     \item \meta{char code}, a decimal representation of the character
+%       code of the token, $-1$ if it is a control sequence (with
+%       \meta{catcode} $0$).
+%     \item \meta{catcode}, a capital hexadecimal digit which denotes
+%       the category code of the \meta{token} (0: control sequence, 1:
+%       begin-group, 2: end-group, 3: math shift, 4: alignment tab, 6:
+%       parameter, 7: superscript, 8: subscript, A: space, B: letter,
+%       C:other, D:active).
+%   \end{itemize}
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -81,32 +104,6 @@
 %   The format used to store token lists internally uses the scan mark
 %   \cs{s_@@} as a delimiter.
 % \end{variable}
-%
-% \begin{function}{\@@_analysis_map_inline:nn}
-%   \begin{syntax}
-%     \cs{@@_analysis_map_inline:nn} \Arg{token list} \Arg{inline function}
-%   \end{syntax}
-%   Applies the \meta{inline function} to each individual \meta{token}
-%   in the \meta{token list}. The \meta{inline function} receives three
-%   arguments:
-%   \begin{itemize}
-%     \item \meta{tokens}, which both \texttt{o}-expand and
-%       \texttt{x}-expand to the \meta{token}. The detailed form of
-%       \meta{token} may change in later releases.
-%     \item \meta{catcode}, a capital hexadecimal digit which denotes
-%       the category code of the \meta{token} (0: control sequence, 1:
-%       begin-group, 2: end-group, 3: math shift, 4: alignment tab, 6:
-%       parameter, 7: superscript, 8: subscript, A: space, B: letter,
-%       C:other, D:active).
-%     \item \meta{char code}, a decimal representation of the character
-%       code of the token, $-1$ if it is a control sequence (with
-%       \meta{catcode} $0$).
-%   \end{itemize}
-% \end{function}
-%
-% For optimizations in \pkg{l3regex} (when matching control sequences),
-% it may be useful to provide a \cs{@@_analysis_from_str_map_inline:nn}
-% function, perhaps named \cs{__str_analysis_map_inline:nn}.
 %
 % \subsection{Internal format}
 %
@@ -881,8 +878,9 @@
 %
 % \subsection{Mapping through the analysis}
 %
-% \begin{macro}{\@@_analysis_map_inline:nn}
+% \begin{macro}{\tl_analysis_map_inline:nn, \tl_analysis_map_inline:on}
 % \begin{macro}{\@@_analysis_map_inline_aux:Nn}
+% \begin{macro}{\@@_analysis_map_inline_aux:nnn}
 %   First obtain the analysis of the token list into
 %   \cs{g_@@_analysis_result_tl}. To allow nested mappings, increase the
 %   nesting depth \cs{g__kernel_prg_map_int} (shared between all modules), then
@@ -894,18 +892,23 @@
 %   |#2|, and loops by calling itself. When the loop ends, remember to
 %   decrease the nesting depth.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_analysis_map_inline:nn #1
+\cs_new_protected:Npn \tl_analysis_map_inline:nn #1
   {
     \@@_analysis:n {#1}
     \int_gincr:N \g__kernel_prg_map_int
     \exp_args:Nc \@@_analysis_map_inline_aux:Nn
       { @@_analysis_map_inline_ \int_use:N \g__kernel_prg_map_int :wNw }
   }
+\cs_generate_variant:Nn \tl_analysis_map_inline:nn { o }
 \cs_new_protected:Npn \@@_analysis_map_inline_aux:Nn #1#2
   {
     \cs_gset_protected:Npn #1 ##1 \s_@@ ##2 ##3 \s_@@
       {
         \use_none:n ##2
+        \@@_analysis_map_inline_aux:nnn {##1} {##3} {##2}
+      }
+    \cs_gset_protected:Npn \@@_analysis_map_inline_aux:nnn ##1##2##3
+      {   
         #2
         #1
       }
@@ -915,6 +918,7 @@
     \prg_break_point:Nn \tl_map_break: { \int_gdecr:N \g__kernel_prg_map_int }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
