--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3362,7 +3362,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_u_not_cs:
   {
-    \tl_map_analysis_inline:on { \l_@@_internal_a_tl }
+    \tl_analysis_map_inline:on { \l_@@_internal_a_tl }
       {
         \tl_build_put_right:Nx \l_@@_build_tl
           {
@@ -4579,7 +4579,7 @@
     \int_set:Nn \l_@@_curr_pos_int { 2 * \l_@@_max_state_int }
     \@@_query_set:nnn { } { -1 } { -2 }
     \int_set_eq:NN \l_@@_min_pos_int \l_@@_curr_pos_int
-    \tl_map_analysis_inline:nn {#1}
+    \tl_analysis_map_inline:nn {#1}
       { \@@_query_set:nnn {##1} {"##3} {##2} }
     \int_set_eq:NN \l_@@_max_pos_int \l_@@_curr_pos_int
     \@@_query_set:nnn { } { -1 } { -2 }
