--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -66,9 +66,9 @@
 % \end{function}
 %
 % \begin{function}[added = 2018-04-09]
-%   {\tl_map_analysis_inline:nn, \tl_map_analysis_inline:on}
+%   {\tl_analysis_map_inline:nn, \tl_analysis_map_inline:on}
 %   \begin{syntax}
-%     \cs{tl_map_analysis_inline:nn} \Arg{token list} \Arg{inline function}
+%     \cs{tl_analysis_map_inline:nn} \Arg{token list} \Arg{inline function}
 %   \end{syntax}
 %   Applies the \meta{inline function} to each individual \meta{token}
 %   in the \meta{token list}. The \meta{inline function} receives three
@@ -878,9 +878,9 @@
 %
 % \subsection{Mapping through the analysis}
 %
-% \begin{macro}{\tl_map_analysis_inline:nn, \tl_map_analysis_inline:on}
-% \begin{macro}{\@@_map_analysis_inline_aux:Nn}
-% \begin{macro}{\@@_map_analysis_inline_aux:nnn}
+% \begin{macro}{\tl_analysis_map_inline:nn, \tl_analysis_map_inline:on}
+% \begin{macro}{\@@_analysis_map_inline_aux:Nn}
+% \begin{macro}{\@@_analysis_map_inline_aux:nnn}
 %   First obtain the analysis of the token list into
 %   \cs{g_@@_analysis_result_tl}. To allow nested mappings, increase the
 %   nesting depth \cs{g__kernel_prg_map_int} (shared between all modules), then
@@ -892,22 +892,22 @@
 %   |#2|, and loops by calling itself. When the loop ends, remember to
 %   decrease the nesting depth.
 %    \begin{macrocode}
-\cs_new_protected:Npn \tl_map_analysis_inline:nn #1
+\cs_new_protected:Npn \tl_analysis_map_inline:nn #1
   {
     \@@_analysis:n {#1}
     \int_gincr:N \g__kernel_prg_map_int
-    \exp_args:Nc \@@_map_analysis_inline_aux:Nn
-      { @@_map_analysis_inline_ \int_use:N \g__kernel_prg_map_int :wNw }
+    \exp_args:Nc \@@_analysis_map_inline_aux:Nn
+      { @@_analysis_map_inline_ \int_use:N \g__kernel_prg_map_int :wNw }
   }
-\cs_generate_variant:Nn \tl_map_analysis_inline:nn { o }
-\cs_new_protected:Npn \@@_map_analysis_inline_aux:Nn #1#2
+\cs_generate_variant:Nn \tl_analysis_map_inline:nn { o }
+\cs_new_protected:Npn \@@_analysis_map_inline_aux:Nn #1#2
   {
     \cs_gset_protected:Npn #1 ##1 \s_@@ ##2 ##3 \s_@@
       {
         \use_none:n ##2
-        \@@_map_analysis_inline_aux:nnn {##1} {##3} {##2}
+        \@@_analysis_map_inline_aux:nnn {##1} {##3} {##2}
       }
-    \cs_gset_protected:Npn \@@_map_analysis_inline_aux:nnn ##1##2##3
+    \cs_gset_protected:Npn \@@_analysis_map_inline_aux:nnn ##1##2##3
       {   
         #2
         #1
