--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3362,7 +3362,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_u_not_cs:
   {
-    \tl_analysis_map_inline:on { \l_@@_internal_a_tl }
+    \tl_analysis_map_inline:Nn \l_@@_internal_a_tl
       {
         \tl_build_put_right:Nx \l_@@_build_tl
           {
