--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2618,7 +2618,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \tl_reverse_tokens:n #1
   {
-    \etex_unexpanded:D \exp_after:wN
+    \__kernel_exp_not:w \exp_after:wN
       {
         \exp:w
         \@@_act:NNNnn
@@ -2974,7 +2974,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case:nnn #1#2#3
   {
-    \etex_unexpanded:D \exp_after:wN
+    \__kernel_exp_not:w \exp_after:wN
       {
         \exp:w
         \@@_change_case_aux:nnn {#1} {#2} {#3}
