One more \etex_unexpanded:D

--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1614,7 +1614,7 @@
   {
     \exp_not:n {#3} \if_false: { \fi: }
     #1 #2 { \s__seq
-      \etex_unexpanded:D \exp_after:wN { \if_false: } } \fi:
+      \__kernel_exp_not:w \exp_after:wN { \if_false: } } \fi:
   }
 \cs_generate_variant:Nn \seq_pop_left:NN  { c }
 \cs_generate_variant:Nn \seq_gpop_left:NN { c }
