Use 'proper' LuaTeX support functions

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2541,10 +2541,10 @@
   {
     \cs_new_protected:Npn \sys_shell_now:n #1
       {
-        \luatex_directlua:D
+        \lua_now_x:n
           {
             os.execute("
-              \luatex_luaescapestring:D { \etex_detokenize:D {#1} }
+              \lua_escape_x:n { \tl_to_str:n {#1} }
             ")
           }
       }
@@ -2566,10 +2566,10 @@
   {
     \cs_new_protected:Npn \sys_shell_shipout:n #1
       {
-        \luatex_latelua:D
+        \lua_shipout_x:n
           {
             os.execute("
-              \luatex_luaescapestring:D { \etex_detokenize:D {#1} }
+              \lua_escape_x:n { \tl_to_str:n {#1} }
             ")
           }
       }
