Move use of \etex_detokenize:D to \__kernel_tl_to_str:w
Same logic as for \etex_unexpanded:D - we need this a 
few times.

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -460,6 +460,17 @@
 %   It takes a time linear in the character count of the string.
 % \end{function}
 %
+% \begin{function}[EXP]{\__kernel_tl_to_str:w}
+%   \begin{syntax}
+%     \cs{__kernel_tl_to_str:w} \meta{expandable tokens} \Arg{tokens}
+%   \end{syntax}
+%   Carries out expansion on the \meta{expandable tokens} before conversion of
+%   the \meta{tokens} to a string as describe for \cs{tl_to_str:n}. Typically,
+%   the \meta{expandable tokens} will alter the nature of the \meta{tokens},
+%   \emph{i.e.}~allow it to be generated in some way. This function requires
+%   only a single expansion.
+% \end{function}
+%
 % \end{implementation}
 %
 % \PrintIndex
