--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -140,7 +140,7 @@
 %   \begin{syntax}
 %     \cs{__kernel_cs_parm_from_arg_count:nnF} \Arg{follow-on} \Arg{args} \Arg{false code}
 %   \end{syntax}
-%   Evaluates the number of \meta{args} and leavs the \meta{follow-on} code
+%   Evaluates the number of \meta{args} and leaves the \meta{follow-on} code
 %   followed by a brace group containing the required number of primitive
 %   parameter markers (|#1|, \emph{etc}.). If the number of \meta{args} is outside
 %   the range $[0,9]$, the \meta{false code} is inserted \emph{instead} of
