--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -1093,11 +1093,11 @@
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 }
   { \tl_analysis_show:N }
 \cs_new_protected:Npn \tl_show_analysis:N #1
-  { \tl_show_analysis:N #1 }
+  { \tl_analysis_show:N #1 }
 \__kernel_patch_deprecation:nnNNpn { 2019-12-31 }
   { \tl_analysis_show:n }
 \cs_new_protected:Npn \tl_show_analysis:n #1
-  { \tl_show_analysis:n {#1} }
+  { \tl_analysis_show:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
