--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -103,6 +103,19 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[EXP, added = 2018-04-13]{\lua_exp_x:n}
+%   \begin{syntax}
+%     \cs{lua_exp_x:n} \Arg{token list}
+%   \end{syntax}
+%   Fully expands the \meta{token list} an \texttt{x}-type manner \emph{but} the
+%   function remains fully expandable.
+%   \begin{texnote}
+%     \cs{lua_exp_x:n} is a macro wrapper around \tn{expanded}:
+%     when \LuaTeX{} is in use two expansions are required to yield the
+%     result.
+%   \end{texnote}
+% \end{function}
+%
 % \begin{function}[EXP, added = 2015-06-29]{\lua_escape_x:n, \lua_escape:n}
 %   \begin{syntax}
 %     \cs{lua_escape:n} \Arg{token list}
@@ -189,24 +202,48 @@
 %<*tex>
 %    \end{macrocode}
 %
+% \begin{macro}[EXP]{\@@_exp_x:n, \@@_escape_x:n, \@@_now_x:n, \@@_shipout_x:n}
+%   Copies of primitives.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_exp_x:n     \luatex_expanded:D
+\cs_new_eq:NN \@@_escape_x:n  \luatex_luaescapestring:D
+\cs_new_eq:NN \@@_now_x:n     \luatex_directlua:D
+\cs_new_eq:NN \@@_shipout_x:n \luatex_latelua:D
+%    \end{macrocode}
+% \end{macro}
+%
+% These functions are set up in \pkg{l3str} for bootstrapping: we want to
+% replace them with a \enquote{proper} version at this stage, so clean up.
+%    \begin{macrocode}
+\cs_undefine:N \lua_exp_x:n
+\cs_undefine:N \lua_escape_x:n
+\cs_undefine:N \lua_now_x:n
+%    \end{macrocode}
+%
 % \begin{macro}[EXP]{\lua_now_x:n, \lua_now:n}
 % \begin{macro}{\lua_shipout_x:n, \lua_shipout:n}
+% \begin{macro}[EXP]{\lua_exp_x:n}
 % \begin{macro}[EXP]{\lua_escape_x:n, \lua_escape:n}
 %   Wrappers around the primitives. As with engines other than \LuaTeX{}
 %   these have to be macros, we give them the same status in all cases.
 %   When \LuaTeX{} is not in use, simply give an error message/
 %    \begin{macrocode}
-\cs_new:Npn \lua_now_x:n #1 { \luatex_directlua:D {#1} }
+\cs_new:Npn \lua_now_x:n #1 { \@@_now_x:n {#1} }
 \cs_new:Npn \lua_now:n #1   { \lua_now_x:n { \exp_not:n {#1} } }
-\cs_new_protected:Npn \lua_shipout_x:n #1 { \luatex_latelua:D {#1} }
+\cs_new_protected:Npn \lua_shipout_x:n #1 { \@@_shiphout_x:n {#1} }
 \cs_new_protected:Npn \lua_shipout:n #1
   { \lua_shipout_x:n { \exp_not:n {#1} } }
-\cs_new:Npn \lua_escape_x:n #1 { \luatex_luaescapestring:D {#1} }
+\cs_new:Npn \lua_exp_x:n #1 { \@@_exp_x:n {#1} }
+\cs_new:Npn \lua_escape_x:n #1 { \@@_escape_x:n {#1} }
 \cs_new:Npn \lua_escape:n #1 { \lua_escape_x:n { \exp_not:n {#1} } }
 \sys_if_engine_luatex:F
   {
     \clist_map_inline:nn
-      { \lua_now_x:n , \lua_now:n , \lua_escape_x:n , \lua_escape:n }
+      {
+        \lua_exp_x:n ,
+        \lua_escape_x:n , \lua_escape:n ,
+        \lua_now_x:n , \lua_now:n
+      }
       {
         \cs_set:Npn #1 ##1
           {
@@ -225,6 +262,7 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
