Correct prefix of some internals

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -202,6 +202,10 @@
 %<*tex>
 %    \end{macrocode}
 %
+%    \begin{macrocode}
+%<@@=luatex>
+%    \end{macrocode}
+%
 % \begin{macro}[EXP]{\@@_exp_x:n, \@@_escape_x:n, \@@_now_x:n, \@@_shipout_x:n}
 %   Copies of primitives.
 %    \begin{macrocode}
