--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1039,7 +1039,7 @@
 \cs_new:Npn \@@_if_eq_x:nn #1#2 { \pdftex_strcmp:D {#1} {#2} }
 \cs_if_exist:NT \luatex_luatexversion:D
    {
-     \cs_set_eq:NN \lua_exp_x:n    \luatex_expanded:D
+     \cs_set_eq:NN \lua_use_x:n    \luatex_expanded:D
      \cs_set_eq:NN \lua_escape_x:n \luatex_luaescapestring:D
      \cs_set_eq:NN \lua_now_x:n    \luatex_directlua:D
      \cs_set:Npn \@@_if_eq_x:nn #1#2
@@ -1056,7 +1056,7 @@
      \cs_new:Npn \@@_escape_x:n #1
        {
          \lua_escape_x:n
-           { \__kernel_tl_to_str:w \lua_exp_x:n { {#1} } }
+           { \__kernel_tl_to_str:w \lua_use_x:n { {#1} } }
        }
    }
 %    \end{macrocode}
