Correct usage of \exp_last_unbraced:Nf (brace second argument)

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1631,7 +1631,7 @@
           \int_compare:nNnT
             {
               \char_value_catcode:n
-                { \exp_last_unbraced:Nf ` \str_head:n {#2} ~ }
+                { \exp_last_unbraced:Nf ` { \str_head:n {#2} } ~ }
             }
             = { 10 } { ~ }
           \exp_after:wN \@@_rescan:w
