--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -1062,7 +1062,7 @@
 \cs_new:Npn \@@_format_python:n #1
   {
     \exp_last_unbraced:Nf \@@_format_python_auxi:NN
-      \__kernel_str_to_other:n {#1} \s_stop \s_stop {#1}
+      { \__kernel_str_to_other:n {#1} } \s_stop \s_stop {#1}
   }
 \cs_new:Npx \@@_format_python_auxi:NN #1#2
   {
