Document that \lua_use_x:n is more likely than other candidates to be deprecated

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -366,7 +366,9 @@
 %   \end{syntax}
 %   Fully expands the \meta{token list} in an \texttt{x}-type manner,
 %   \emph{but} the function remains fully expandable, and parameter
-%   character (usually~|#|) need not be doubled.
+%   character (usually~|#|) need not be doubled.  \emph{This function is
+%   likely to be deprecated and renamed (after a year, as usual) if the
+%   \tn{expanded} primitive makes its way to other engines.}
 %   \begin{texnote}
 %     \cs{lua_use_x:n} is a macro wrapper around \tn{expanded}:
 %     when \LuaTeX{} is in use two expansions are required to yield the
