--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -102,7 +102,7 @@
 %     towards $+\infty$ if $t>0$ and towards $-\infty$ if $t<0$.  And
 %     \emph{(not yet)} modulo, and \enquote{quantize}.
 %   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$ in
-%     \pdfTeX{} and \LuaTeX{} engines.
+%     all engines except \XeTeX{}.
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
@@ -1253,8 +1253,8 @@
 %     \cs{fp_eval:n} \{ |rand()| \}
 %   \end{syntax}
 %   Produces a pseudo-random floating-point number (multiple of
-%   $10^{-16}$) between $0$~included and $1$~excluded.  Available in
-%   \pdfTeX{} and \LuaTeX{} engines only.
+%   $10^{-16}$) between $0$~included and $1$~excluded.  Unavailable in
+%   the \XeTeX{} engine.
 %   \begin{texnote}
 %     This is based on pseudo-random numbers provided by the engine's
 %     primitive \tn{pdfuniformdeviate} in \pdfTeX{} and
