--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -116,8 +116,8 @@
 %     $\operatorname{round}(x,n,t)$ rounds to the closest value, with
 %     ties rounded to an even value by default, towards zero if $t=0$,
 %     towards $+\infty$ if $t>0$ and towards $-\infty$ if $t<0$.
-%   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$ (requires
-%     \pdfTeX{} or \LuaTeX{}).
+%   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$
+%     (not available in \XeTeX{}).
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
