Harmonize how we write logos

--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -150,7 +150,7 @@
 %   in Tables~\ref{tab:encodings} and~\ref{tab:escapings}, respectively.
 %   The default escaping is to input and output bytes directly.  The
 %   special case of an empty \meta{name} indicates the use of
-%   \enquote{native} strings, 8-bit for pdf\TeX{}, and Unicode strings
+%   \enquote{native} strings, 8-bit for \pdfTeX{}, and Unicode strings
 %   for the other two engines.
 %
 %   For example,
@@ -1308,11 +1308,11 @@
 % \begin{itemize}
 %   \item \texttt{bytes} (default), non-bytes are filtered out, and
 %     bytes are left untouched (this is defined by default);
-%   \item \texttt{hex} or \texttt{hexadecimal}, as per the pdf\TeX{}
+%   \item \texttt{hex} or \texttt{hexadecimal}, as per the \pdfTeX{}
 %     primitive \tn{pdfescapehex}
-%   \item \texttt{name}, as per the pdf\TeX{} primitive
+%   \item \texttt{name}, as per the \pdfTeX{} primitive
 %     \tn{pdfescapename}
-%   \item \texttt{string}, as per the pdf\TeX{} primitive
+%   \item \texttt{string}, as per the \pdfTeX{} primitive
 %     \tn{pdfescapestring}
 %   \item \texttt{url}, as per the percent encoding of urls.
 % \end{itemize}
