--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -744,7 +744,7 @@
 %   \item Conditional subpatterns with look ahead/behind: \enquote{if
 %       what follows is [\ldots{}], then [\ldots{}]}.
 %   \item |(*..)| and |(?..)| sequences to set some options.
-%   \item UTF-8 mode for pdf\TeX{}.
+%   \item UTF-8 mode for \pdfTeX{}.
 %   \item Newline conventions are not done.
 %     In particular, we should have an option for |.| not to match newlines.
 %     Also, |\A| should differ from |^|, and |\Z|, |\z| and |$| should
@@ -798,7 +798,7 @@
 %   \item Comments: \TeX{} already has its own system for comments.
 %   \item |\Q...\E| escaping: this would require to read the argument
 %     verbatim, which is not in the scope of this module.
-%   \item |\C| single byte in UTF-8 mode: Xe\TeX{} and Lua\TeX{} serve
+%   \item |\C| single byte in UTF-8 mode: \XeTeX{} and \LuaTeX{} serve
 %     us characters directly, and splitting those into bytes is tricky,
 %     encoding dependent, and most likely not useful anyways.
 % \end{itemize}
