--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -993,7 +993,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 % For small-ish files, it's often more convenient to use |\CatchFileDef| or |\tl_set_from_file:Nnn|, but it's important to realise that in doing so the entire file is scanned in one go by \TeX; this exhausts its memory after a certain file size (roughly 2MB at time of writing for the present author).
 %
 % Therefore, we use the `expanding' version instead, which at first seems strange; why would you want to expand all input when reading from a file? Because this way, \TeX\ simply moves its input scanner (probably not the right word) to the file to read and can handle much larger file sizes.
-% The trick is simply to have our wrapper macro |\auxdata:nn| defined to expand to non-expanded version of itself with its arguments. (A nice trick courtesy of \hologo{eTeX}.)
+% The trick is simply to have our wrapper macro |\auxdata:nn| defined to expand to non-expanded version of itself with its arguments. (A nice trick courtesy of \eTeX{}.)
 %
 % This method still has limitations, but it helps.
 %    \begin{macrocode}
