--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -999,7 +999,7 @@
 %    \item \pdfTeX{} v1.40 or later.
 %    \item \XeTeX{} v0.9994 or later.
 %    \item \LuaTeX{} v0.70 or later.
-%    \item e-(u)p\TeX{} mid-2012 or later.
+%    \item e-(u)\pTeX{} mid-2012 or later.
 % \end{itemize}
 %
 % Additional modules beyond the core of \pkg{expl3} may require additional
