--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -505,7 +505,7 @@
   \begingroup
 %    \end{macrocode}
 % Lower case chars: map to themselves when lower casing and down by |"20| when
-% upper casing. (The characters |a|--|z| are set up correctly by Ini\TeX{}.)
+% upper casing. (The characters |a|--|z| are set up correctly by \IniTeX{}.)
 %    \begin{macrocode}
     \def\temp{%
       \ifnum\count0>\count2 %
@@ -525,7 +525,7 @@
 %    \end{macrocode}
 % Upper case chars: map up by |"20| when lower casing, to themselves when upper
 % casing and require an \tn{sfcode} of $999$. (The characters |A|--|Z| are set
-% up correctly by Ini\TeX{}.)
+% up correctly by \IniTeX{}.)
 %    \begin{macrocode}
     \def\temp{%
       \ifnum\count0>\count2 %
