--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -61,7 +61,7 @@
 %     conjugation with \pdfTeX{} or \LuaTeX{} in DVI mode.
 %   \item \texttt{dvisvgm}:  The \texttt{dvisvgm} program, which works in
 %     conjugation with \pdfTeX{} or \LuaTeX{} when run in DVI mode as well
-%     as with (u)p\TeX{} and \XeTeX{}.
+%     as with (u)\pTeX{} and \XeTeX{}.
 %   \item \texttt{xdvipdfmx}: The driver used by \XeTeX{}.
 % \end{itemize}
 %
