--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -492,7 +492,7 @@
 %   by the \cs{iow_wrap:nnnN}
 %   function. This value depends on the \TeX{} system in use: the standard
 %   value is $78$, which is typically correct for unmodified \TeX{}live
-%   and MiK\TeX{} systems.
+%   and \hologo{MiKTeX} systems.
 % \end{variable}
 %
 % \subsection{Constant input--output streams, and variables}
@@ -704,7 +704,7 @@
 %   underlying mechanism needs to be queried. For \LaTeXe{} and plain \TeX{}
 %   this data is stored in |\count16|: with the \pkg{etex} package loaded
 %   we need to subtract $1$ as the register holds the number of the next
-%   stream to use. In Con\TeX{}t, we need to look at |\count38| but there
+%   stream to use. In \ConTeXt{}, we need to look at |\count38| but there
 %   is no subtraction: like the original plain \TeX{}/\LaTeXe{} mechanism
 %   it holds the value of the \emph{last} stream allocated.
 %    \begin{macrocode}
@@ -1299,7 +1299,7 @@
 %   This is the \enquote{raw} number of characters in a line which
 %   can be written to the terminal.
 %   The standard value is the line length typically used by
-%   \TeX{}Live and Mik\TeX{}.
+%   \TeX{}Live and \hologo{MiKTeX}.
 %    \begin{macrocode}
 \int_new:N  \l_iow_line_count_int
 \int_set:Nn \l_iow_line_count_int { 78 }
