A couple of primitive-rename corrections

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1052,8 +1052,8 @@
   \@@_primitive:NN \Umathunderbarvgap           \utex_underbarvgap:D
   \@@_primitive:NN \Umathunderdelimiterbgap     \utex_underdelimiterbgap:D
   \@@_primitive:NN \Umathunderdelimitervgap     \utex_underdelimitervgap:D
-  \@@_primitive:NN \Unosubscript                \utex_Unosubscript:D
-  \@@_primitive:NN \Unosuperscript              \utex_Unosuperscript:D
+  \@@_primitive:NN \Unosubscript                \utex_nosubscript:D
+  \@@_primitive:NN \Unosuperscript              \utex_nosuperscript:D
   \@@_primitive:NN \Uoverdelimiter              \utex_overdelimiter:D
   \@@_primitive:NN \Uradical                    \utex_radical:D
   \@@_primitive:NN \Uroot                       \utex_root:D
