\expanded is \use_x:n
As Chris argues, the namign should reflect the function,
even if here we are resticted in engine coverage.

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -193,10 +193,9 @@
 %<@@=luatex>
 %    \end{macrocode}
 %
-% \begin{macro}[EXP]{\@@_use_x:n, \@@_escape_x:n, \@@_now_x:n, \@@_shipout_x:n}
+% \begin{macro}[EXP]{\@@_escape_x:n, \@@_now_x:n, \@@_shipout_x:n}
 %   Copies of primitives.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_use_x:n     \luatex_expanded:D
 \cs_new_eq:NN \@@_escape_x:n  \luatex_luaescapestring:D
 \cs_new_eq:NN \@@_now_x:n     \luatex_directlua:D
 \cs_new_eq:NN \@@_shipout_x:n \luatex_latelua:D
@@ -206,14 +205,12 @@
 % These functions are set up in \pkg{l3str} for bootstrapping: we want to
 % replace them with a \enquote{proper} version at this stage, so clean up.
 %    \begin{macrocode}
-\cs_undefine:N \lua_use_x:n
 \cs_undefine:N \lua_escape_x:n
 \cs_undefine:N \lua_now_x:n
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\lua_now_x:n, \lua_now:n}
 % \begin{macro}{\lua_shipout_x:n, \lua_shipout:n}
-% \begin{macro}[EXP]{\lua_use_x:n}
 % \begin{macro}[EXP]{\lua_escape_x:n, \lua_escape:n}
 %   Wrappers around the primitives. As with engines other than \LuaTeX{}
 %   these have to be macros, we give them the same status in all cases.
@@ -224,14 +221,13 @@
 \cs_new_protected:Npn \lua_shipout_x:n #1 { \@@_shiphout_x:n {#1} }
 \cs_new_protected:Npn \lua_shipout:n #1
   { \lua_shipout_x:n { \exp_not:n {#1} } }
-\cs_new:Npn \lua_use_x:n #1 { \@@_use_x:n {#1} }
 \cs_new:Npn \lua_escape_x:n #1 { \@@_escape_x:n {#1} }
 \cs_new:Npn \lua_escape:n #1 { \lua_escape_x:n { \exp_not:n {#1} } }
 \sys_if_engine_luatex:F
   {
     \clist_map_inline:nn
       {
-        \lua_use_x:n ,
+        \use_x:n ,
         \lua_escape_x:n , \lua_escape:n ,
         \lua_now_x:n , \lua_now:n
       }
@@ -253,7 +249,6 @@
       }
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
