Document the fact that adding +0 converts -0 to +0

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -129,9 +129,12 @@
 %   \LaTeX{} can now compute: $ \frac{\sin (3.5)}{2} + 2\cdot 10^{-3}
 %   = \ExplSyntaxOn \fp_to_decimal:n {sin(3.5)/2 + 2e-3} $.
 % \end{verbatim}
-% But in all fairness, this module is mostly meant as an underlying tool
-% for higher-level commands.  For example, one could provide a function
-% to typeset nicely the result of floating point computations.
+% The operation \texttt{round} can be used to limit the result's
+% precision.  Adding $+0$ avoids the possibly undesirable output |-0|,
+% replacing it by |+0|.  However, the \pkg{l3fp} module is mostly meant
+% as an underlying tool for higher-level commands.  For example, one
+% could provide a function to typeset nicely the result of floating
+% point computations.
 % \begin{verbatim}
 %   \documentclass{article}
 %   \usepackage{xparse, siunitx}
@@ -143,6 +146,8 @@
 %   \calcnum { 2 pi * sin ( 2.3 ^ 5 ) }
 %   \end{document}
 % \end{verbatim}
+% See the documentation of \pkg{siunitx} for various options of
+% \cs{num}.
 %
 % \section{Creating and initialising floating point variables}
 %
