Avoid \tl_to_str:n abuse by using the kernel function

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2100,15 +2100,14 @@
 %   |#1| has a single item, the token is~|^| and the catcode test
 %   yields \texttt{true}.  Otherwise, it is one of the characters
 %   resulting from \cs{tl_to_str:n}, and the catcode test yields
-%   \texttt{false}.  Note that \cs{if_catcode:w} takes care of the
-%   expansions, and that \cs{tl_to_str:n} (the \tn{detokenize}
-%   primitive) actually expands tokens until finding a begin-group
-%   token.
+%   \texttt{false}.  Note that \cs{if_catcode:w} and
+%   \cs{__kernel_tl_to_str:w} are primitives that take care of
+%   expansion.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_single:n #1 { p , T , F , TF }
   {
     \if_catcode:w ^ \exp_after:wN \@@_if_single:nnw
-        \tl_to_str:n \exp_after:wN { \use_none:nn #1 ?? } ^ ? \q_stop
+        \__kernel_tl_to_str:w \exp_after:wN { \use_none:nn #1 ?? } ^ ? \q_stop
       \prg_return_true:
     \else:
       \prg_return_false:
